css/style.css
* {
    margin: 0;
    font-family: sans-serif;

}

html {
    scroll-behavior: smooth;
}

body {
    margin: 0;
    background-color: #0A0A0A;
    color: white; /* optional: default text color so you don't repeat it everywhere */
}

.navigation {
    list-style: none;
    display: flex;
    justify-content: center;
    text-align: center;
    gap: 50px;
    margin: 0;
    background-color: black;
    padding: 50px;

}

.navigation a {
    color: white;
    text-decoration: none;
    font-size: 20px;
    font-family: sans-serif;
    transition: border-color 0.2s, color 0.2s;
    
}

.navigation a:hover {
    color: #D8FF4B;
    border-bottom: 2px solid #D8FF4B;
}

.navigation a:hover{
    color: #D8FF4B;
}

.home-section{
    background-image: url(/assests/background.jpg);
    padding: 150px;

}

h1 {
    text-align: center;
    color: white;
    font-size: 50px;
    line-height: 1.4;
}

.about-me-section {
    background-color: #1A1A1A; 
    padding: 100px;
    display: flex;
    justify-content: center;
}


.contain {
    background-color: white;
    color: #0A0A0A; 
    display: flex;
    gap: 30px;
    flex-wrap: wrap;
    align-items: center;
    padding: 50px;
    border-radius: 20px;
    max-width: 1200px;
}



.profile {
    width: 250px;
    flex-shrink: 0;
    border: 3px solid black;
}



.about-me-section h2 {
    font-size: 50px;
    color: black;
    display: flex;

}
.about {
    color: black;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    gap: 20px;
    text-align: justify;
}

.about p {
    max-width: 700px;
}

.grid{
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    background-color: #0A0A0A;
}

.logo {
    width: 50px;
}
.technical {
    padding-top: 30px;
    color: white;
    text-align: center;
    font-size: 30px;
}

.skill {
    margin: 50px;
    border: 2px solid white;
    background-color: #1A1A1A;
    padding: 25px;
    border-radius: 20px;
    color: white;
    flex-wrap: wrap;
    text-align: center;
}

.experience {
    background-color: #3A3A3A;
    padding: 100px;
}

.experience h2, .experience p {
    font-size: 40px;
    text-align: center;
}

.projects-section {
    background-color: #8A8A8A;
    padding: 100px;
}

.projects-section h2, .projects-section p {
    font-size: 40px;
    text-align: center;
}

.socials {
    display: flex;
    flex-wrap: wrap;
    gap: 2px;
    background-color: whitesmoke;

}

.contacts-section {
    display: flex;
    flex: 2;
    border: 2px solid  #E0E0E0;
    background-color: #1A1A1A;
    flex-direction: column;
    align-items: center;      
    justify-content: center;  
}

.contacts-section a {
    text-decoration: none;
    color: white;
    font-size: 20px;
}

.form {
    flex: 3;
    border: 2px solid #E0E0E0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #1A1A1A;
    padding: 50px;
}

.title {
    text-align: center;
    font-family: sans-serif;
    font-size: 35px;
    padding: 35px;
    
}

label {
    text-decoration: none;
}

button, input, textarea {
    width: 300px;
    max-width: 300px;
    min-width: 250px;
}

.form form {
    color: black;
    display: flex;
    flex-direction: column;
    gap: 10px;
    background-color: whitesmoke;
    padding: 50px;
    height: fit-content;
    border-radius: 25px;
}

.contacts-section h3 {
    font-size: 30px;
    padding-bottom: 30px;
}

.contacts-section,
.form {
    min-width: 300px;
}

